fix(config): align label and input layout

--- a/src/pages/Config/Config.css
+++ b/src/pages/Config/Config.css
@@ -12,10 +12,6 @@
   margin-bottom: 5px !important;
 }
 
-.input-column .ant-form-item-control {
-  margin-left: 5px;
-}
-
 .submit-column .ant-form-item-control {
   padding-left: 5px;
 }
